[workspace]
resolver = "3"
members = [
    "benchmark",
    "quest01",
    "quest02",
]

[workspace.metadata.quest01]
start_time = 2025-08-27T00:41:40.438043
completion_time = 2025-08-27T01:20:15.028981

[workspace.metadata.quest02]
start_time = 2025-08-28T03:15:48.860439
completion_time = 2025-08-28T03:38:07.816476
[profile.release]
debug = true
